0.1.0
Fixed filter combobox being too large with lots of filters ( calibre I'm looking at you! ).
Load images in filelist in background.
1st commit

0.0.0 >
Internal releases.